# wall-paper-X

./: .gitignore  LICENSE_RULES.md  README.md
WallpaperX.Native/: CMakeLists.txt  README.md
WallpaperX.Native/installer/: Build-OfflinePackage.ps1  Install-WallpaperXNative.ps1
WallpaperX.Native/src/: main.cpp
source-code/: README.md
source-code/WallpaperX.Native/: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md
source-code/WallpaperX.Native/.github/: PULL_REQUEST_TEMPLATE.md
source-code/WallpaperX.Native/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
source-code/WallpaperX.Native/.github/workflows/: build.yml
source-code/WallpaperX.Native/installer/: Build-InstallerExe.ps1  Build-OfflinePackage.ps1  Build-SelfExtractInstaller.ps1  Generate-InstallerPayload.ps1  Install-WallpaperXNative.ps1  Uninstall-WallpaperXNative.ps1
source-code/WallpaperX.Native/resources/: app_icon.rc
source-code/WallpaperX.Native/src/: generated_payload.h  installer.cpp  main.cpp  startup.cpp  uninstaller.cpp
